name:                Rete
version:             0.1.0.0
synopsis:            An implementation of Rete/UL algorithm
description:         Provides a Haskell implementation of the Rete/UL
                     algorithm as described in "Production Matching
                     for Large Learning Systems" Robert Doorenbos PhD
                     Thesis using STM.
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) Konrad Grzanek 2014
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if impl(ghc > 6.10)
    ghc-options: -fregs-graph

  exposed-modules:     AI.Rete
                       AI.Rete.Data
                       AI.Rete.Env
                       AI.Rete.Id
                       AI.Rete.Symbol
                       AI.Rete.WME
  -- other-modules:
  other-extensions:    Safe
  build-depends:       base >=4.7 && <4.8,
                       stm >= 2.4.3,
                       containers >= 0.5.5.1
  -- hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite WME-1
--   hs-source-dirs: tests
--   main-is: WME-1.hs
--   type: exitcode-stdio-1.0

--   build-depends: base,
--                  Rete

--   ghc-options: -Wall -O2
--   if impl(ghc >= 6.8)
--     ghc-options: -fwarn-tabs
--   if impl(ghc > 6.10)
--     ghc-options: -fregs-graph
